--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "format": "prettier -w .",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "preview": "nuxt preview"
   },
   "dependencies": {
     "nuxt": "^3.15.2",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxt/eslint": "^0.7.5",
+    "eslint-plugin-unicorn": "^56.0.1",
+    "prettier": "^3.4.2"
   }
 }
