--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "nuxt-app",
+	"name": "bordmonitor",
 	"private": true,
 	"type": "module",
 	"scripts": {
@@ -12,6 +12,7 @@
 		"preview": "nuxt preview"
 	},
 	"dependencies": {
+		"@acab/reset.css": "^0.11.0",
 		"nuxt": "^3.15.2",
 		"vue": "latest",
 		"vue-router": "latest"
@@ -19,6 +20,7 @@
 	"devDependencies": {
 		"@nuxt/eslint": "^0.7.5",
 		"eslint-plugin-unicorn": "^56.0.1",
-		"prettier": "^3.4.2"
+		"prettier": "^3.4.2",
+		"sass-embedded": "^1.83.4"
 	}
 }
