--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 	},
 	"dependencies": {
 		"@acab/reset.css": "^0.11.0",
+		"@vueuse/core": "^12.5.0",
+		"@vueuse/nuxt": "^12.5.0",
 		"nuxt": "^3.15.2",
 		"vue": "latest",
 		"vue-router": "latest"
