--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@acab/reset.css": "^0.11.0",
+		"@fontsource-variable/jetbrains-mono": "^5.1.2",
 		"@vueuse/core": "^12.5.0",
 		"@vueuse/nuxt": "^12.5.0",
 		"nuxt": "^3.15.2",
