--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"generate": "nuxt generate",
 		"postinstall": "nuxt prepare",
 		"lint": "eslint .",
-		"preview": "nuxt preview"
+		"preview": "nuxt preview",
+		"docker:build": "docker build -t fortnet/bordmonitor .",
+		"docker:run": "docker run --rm -p 3000:3000 fortnet/bordmonitor"
 	},
 	"dependencies": {
 		"@acab/reset.css": "^0.11.0",
