add portainer auto updater

--- a/.github/workflows/deploy-ghcr.yml
+++ b/.github/workflows/deploy-ghcr.yml
@@ -27,6 +27,6 @@ jobs:
           docker build . --tag ghcr.io/fortnet-dev/bordmonitor:latest
           docker push ghcr.io/fortnet-dev/bordmonitor:latest
 
-      # - name: "Update instance"
-      #   run: |
-      #     curl -X POST ${{ secrets.PORTAINER_WEBHOOK_URL }}
+      - name: "Update instance"
+        run: |
+          curl -X POST ${{ secrets.PORTAINER_WEBHOOK_URL }}
