--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"@vueuse/core": "^12.5.0",
 		"@vueuse/nuxt": "^12.5.0",
 		"nuxt": "^3.15.2",
+		"socket.io": "^4.8.1",
+		"socket.io-client": "^4.8.1",
 		"vue": "latest",
 		"vue-router": "latest"
 	},
